--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
 }
 header, footer {
     background: #333;
-    color: #fff;
+    color: #005127;
     text-align: center;
     padding: 1em;
 }
