reverting commit "Update styles.css"
This reverts commit 8410e6f313163616600bf6e776b45191db3603a2.

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
 }
 header, footer {
     background: #333;
-    color: #005127;
+    color: #fff;
     text-align: center;
     padding: 1em;
 }
